Fix #projects containerheight w/ overflow:auto, refactor redundant CSS

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,19 +17,9 @@ h1 {
   margin: 0px;
 }
 
-h1:hover span {
-    opacity: 1;
-    transition: .2s linear;
-  }
-
-svg {
-  opacity: .8;
-  padding: 0px 0px;
-}
-
-svg:hover {
-  opacity: .6;
-  cursor: pointer;
+h1:hover .pronunciation {
+  opacity: 1;
+  transition: .2s linear;
 }
 
 h2 {
@@ -37,10 +27,6 @@ h2 {
   font-size: 2em;
   border-bottom: 25px solid #ffd480;  
 }
-
-/*li a:hover {
-  opacity: .8;
-}*/
 
 /* Standard link behavior */
 a,
@@ -75,29 +61,17 @@ a p, h4 {
   color: #333;
 }
 
-a h4 {
-  line-height: .9;
-}
-
-a p {
-  font-style: italic;
-  /*line-height: 1.3*/
-}
-
-a footer {
-  color: white;
-}
-
 #nav-buttons,
 #about,
 #projects,
 #contact {
-  margin-top: 75px;
+  margin-top: 65px;
 }
 
 footer {
   font-family: Dosis;
   font-size: 2rem;
+  color: white;
   background-color: #7997A2;
   margin-top: 100px;
   margin-bottom: 0px;
@@ -114,6 +88,16 @@ footer:hover > .fa-arrow-up {
 /* Classes in alphabetical order */
 .fa5-icons {
   margin: 0px 45px;
+}
+
+.fa5-icons svg {
+  opacity: .8;
+  padding: 0px 0px;
+}
+
+.fa5-icons svg:hover {
+  opacity: .6;
+  cursor: pointer;
 }
 
 .fa5-icons > a {
@@ -153,11 +137,11 @@ footer:hover > .fa-arrow-up {
 }
 
 /* why won't this select the project? */
-/*div.project:nth-of-type(even){ 
-  margin-right: 0px;
+/*#projects .project:nth-child(even){ 
+  margin-right: 0%;
 }*/
 
-div.project:hover {
+.project:hover {
   background-color: #efefef;
 }
 
@@ -169,14 +153,12 @@ div.project:hover {
   margin: 7px 7px 0px 7px;
   background-color: #FFCCCC;
   border-radius: 5%;
-  border: none;
 }
 
 .pronunciation {
   opacity: 0;
   color: #E3A1A1;
   font-size: 2rem;
-  font-style: ;
   text-shadow: none;
   font-style: italic;
   font-weight: 200;
@@ -221,16 +203,8 @@ div.project:hover {
   font-style: italic;
 }
 
-#nav-buttons {
-  border: 5px solid #333;
-  padding: 15px;
-  margin: auto auto;
-  font-family: Kreon;
-  font-size: 1.45rem;
-}
-
 #github-more-div {
-  color: #333;
+  color: #666;
   text-align: center;
   margin-top: 10px;
 }
@@ -239,15 +213,21 @@ div.project:hover {
   display: inline-block;  
 }
 
-#github-projects-icon {
-  font-size: 7rem;
-}
-
 #github-plus-icon {
-  font-size: 2.5rem;
-  transform: translateY(-50%);
+  transform: translateY(-85%);
 }
 
+#nav-buttons {
+  border: 5px solid #333;
+  padding: 15px;
+  margin: auto;
+  font-family: Kreon;
+  font-size: 1.45rem;
+}
+
+#projects {
+  overflow: auto;
+}
 
 /* Media Queries (I use Bootstrap's breakpoints) */
   /* the default size is Extra Large (>991px) */
@@ -258,7 +238,7 @@ div.project:hover {
     font-size: 4.5rem;
   }
 
-  div.project {
+  .project {
     height: 340px;
   }
 
@@ -273,7 +253,7 @@ div.project:hover {
     display: none;
   }
 
-  div.project {
+  .project {
     height: 290px;
     width: 100%;
     margin-left: 0;
@@ -344,6 +324,6 @@ div.project:hover {
 
   #nav-buttons a:hover::after {
     width: 100%;
-      /*//transition: width .3s;*/
+    /*transition: width .3s;*/
   }
 }
